# ffmpeg-usage

./: .gitignore  Cargo.toml  README.md
src/: ffmpeg_tools.rs  main.rs
tests/: integration.rs  test.m4a
